configure Charts to use correct names configure build.gradle add wa DMNs tests

--- a/build.gradle
+++ b/build.gradle
@@ -132,10 +132,10 @@ jacocoTestReport {
 
 pitest {
   junit5PluginVersion = '0.12'
-  targetClasses = ['uk.gov.hmcts.reform.iataskconfiguration.*']
+  targetClasses = ['uk.gov.hmcts.reform.wataskconfigurationtemplate.*']
   excludedClasses = [
-    'uk.gov.hmcts.reform.iataskconfiguration.config.*',
-    'uk.gov.hmcts.reform.iataskconfiguration.Application'
+    'uk.gov.hmcts.reform.wataskconfigurationtemplate.config.*',
+    'uk.gov.hmcts.reform.wataskconfigurationtemplate.Application'
   ]
   threads = 10
   outputFormats = ['XML', 'HTML']
@@ -150,13 +150,13 @@ project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: ia-task-configuration"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:ia-task-configuration"
+    property "sonar.projectName", "Reform :: wa-task-configuration-template"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:wa-task-configuration-template"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
-    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iataskconfiguration/config/**," +
-                                 "src/main/java/uk/gov/hmcts/reform/iataskconfiguration/Application.java"
+    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskconfigurationtemplate/config/**," +
+                                 "src/main/java/uk/gov/hmcts/reform/wataskconfigurationtemplate/Application.java"
   }
 }
 
@@ -274,11 +274,11 @@ dependencies {
 
 }
 
-mainClassName = 'uk.gov.hmcts.reform.iataskconfiguration.Application'
+mainClassName = 'uk.gov.hmcts.reform.wataskconfigurationtemplate.Application'
 
 bootJar {
   getArchiveFileName().set(provider {
-    'ia-task-configuration.jar'
+    'wa-task-configuration-template.jar'
   })
 
   manifest {
