--- a/build.gradle
+++ b/build.gradle
@@ -217,7 +217,7 @@ def versions = [
   camunda         : '7.14.0',
   pitest          : '1.5.2',
   sonarPitest     : '0.5',
-  tomcat          : '9.0.54'
+  tomcat          : '9.0.58'
 
 ]
 
@@ -246,8 +246,8 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
 
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.58'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.58'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
   implementation 'org.camunda.bpm:camunda-external-task-client:7.15.0'
 
