--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.4.12'
+  id 'org.springframework.boot' version '2.6.4'
+  id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.38.0'
-  id 'org.owasp.dependencycheck' version '6.1.6'
   id 'org.sonarqube' version '3.2.0'
-  id 'info.solidsoft.pitest' version '1.5.2'
+  id 'info.solidsoft.pitest' version '1.7.0'
   id 'io.freefair.lombok' version '5.3.0'
 }
 
@@ -53,6 +53,10 @@ sourceSets {
     }
     resources.srcDir file('src/smokeTest/resources')
   }
+}
+
+tasks.withType(Copy) {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 tasks.withType(JavaCompile) {
@@ -192,6 +196,13 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
       entry 'guava'
     }
+
+    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
+    dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
+    dependency group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.5.2'
+
     //CVE-2021-28170
     dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
 
@@ -210,12 +221,12 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.2',
-  junitPlatform   : '1.7.2',
+  junit           : '5.8.2',
+  junitPlatform   : '1.8.2',
   reformLogging   : '5.1.9',
   springfoxSwagger: '2.9.2',
   camunda         : '7.14.0',
-  pitest          : '1.5.2',
+  pitest          : '1.7.4',
   sonarPitest     : '0.5',
   tomcat          : '9.0.58'
 
@@ -249,16 +260,16 @@ dependencies {
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
-  implementation 'org.camunda.bpm:camunda-external-task-client:7.15.0'
+  implementation 'org.camunda.bpm:camunda-external-task-client:7.16.0'
 
-  annotationProcessor 'org.projectlombok:lombok:1.18.20'
-  compileOnly 'org.projectlombok:lombok:1.18.20'
+  annotationProcessor 'org.projectlombok:lombok:1.18.22'
+  compileOnly 'org.projectlombok:lombok:1.18.22'
 
-  testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.7.0'
 
-  testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
-  testCompile group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
+  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  testImplementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
@@ -268,7 +279,7 @@ dependencies {
   testImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: "${versions.camunda}"
   testImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '8.0.0'
   testImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.14.0'
-  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+  testImplementation group: 'com.h2database', name: 'h2', version: '2.1.210'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
