--- a/build.gradle
+++ b/build.gradle
@@ -202,6 +202,7 @@ dependencyManagement {
     dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
     dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
     dependency group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.5.2'
+    dependency group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
 
     //CVE-2021-28170
     dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
