--- a/build.gradle
+++ b/build.gradle
@@ -225,7 +225,7 @@ def versions = [
   junit           : '5.8.2',
   junitPlatform   : '1.8.2',
   reformLogging   : '5.1.9',
-  springfoxSwagger: '2.9.2',
+  springDoc       : '1.6.6',
   camunda         : '7.14.0',
   pitest          : '1.7.4',
   sonarPitest     : '0.5',
@@ -250,7 +250,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
 
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
