--- a/build.gradle
+++ b/build.gradle
@@ -222,8 +222,8 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.8.2',
-  junitPlatform   : '1.8.2',
+  junit           : '5.7.2',
+  junitPlatform   : '1.7.2',
   reformLogging   : '5.1.9',
   springDoc       : '1.6.6',
   camunda         : '7.14.0',
@@ -231,6 +231,16 @@ def versions = [
   sonarPitest     : '0.5',
   tomcat          : '9.0.58'
 
+]
+
+ext.libraries = [
+  junit5: [
+    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
+    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
+    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+  ]
 ]
 
 dependencies {
@@ -259,14 +269,9 @@ dependencies {
   testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
   testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.7.0'
 
-  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
   testImplementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
 
-  testImplementation(platform("org.junit:junit-bom:5.8.2"))
-  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-  testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
-
+  testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
