--- a/build.gradle
+++ b/build.gradle
@@ -204,6 +204,8 @@ dependencyManagement {
     dependency group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.5.2'
     dependency group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
 
+    dependency group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0-rc1'
+
     //CVE-2021-28170
     dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
 
