--- a/build.gradle
+++ b/build.gradle
@@ -221,7 +221,7 @@ repositories {
 def versions = [
   junit           : '5.7.2',
   junitPlatform   : '1.7.2',
-  reformLogging   : '5.1.9',
+  reformLogging   : '6.0.1',
   springDoc       : '1.6.6',
   camunda         : '7.18.0',
   pitest          : '1.7.4',
@@ -263,6 +263,7 @@ dependencies {
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
   implementation 'org.camunda.bpm:camunda-external-task-client:7.18.0'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.0.1'
 
   annotationProcessor 'org.projectlombok:lombok:1.18.24'
   compileOnly 'org.projectlombok:lombok:1.18.24'
