--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["local>hmcts/.github:renovate-config"],
   "enabledManagers": ["helm-requirements","gradle-wrapper"],
   "labels": ["dependencies"],
   "helm-requirements":
