--- a/build.gradle
+++ b/build.gradle
@@ -230,7 +230,8 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
 
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.1'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
