--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.7.18'
+  id 'io.spring.dependency-management' version '1.1.6'
+  id 'org.springframework.boot' version '3.3.0'
   id 'org.owasp.dependencycheck' version '10.0.3'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'org.sonarqube' version '5.1.0.4882'
-  id 'io.freefair.lombok' version '6.6.3'
+  id 'io.freefair.lombok' version '8.7.1'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -98,7 +98,7 @@ task tests {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '8.45.1'
+  toolVersion = '10.17.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
@@ -186,7 +186,7 @@ dependencyManagement {
     dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.2'
 
     //CVE-2021-42550
-    dependencySet(group: 'ch.qos.logback', version: '1.2.13') {
+    dependencySet(group: 'ch.qos.logback', version: '1.5.7') {
       entry 'logback-classic'
       entry 'logback-core'
     }
@@ -200,12 +200,12 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.2',
-  junitPlatform   : '1.7.2',
+  junit           : '5.11.0',
+  junitPlatform   : '1.11.0',
   reformLogging   : '6.1.6',
-  springDoc       : '1.6.6',
+  springDoc       : '2.6.0',
   camunda         : '7.21.0',
-  tomcat          : '9.0.91'
+  tomcat          : '10.1.16'
 
 ]
 
@@ -233,7 +233,7 @@ dependencies {
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.2'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: versions.springDoc
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
