--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.6'
-  id 'org.springframework.boot' version '3.3.0'
+  id 'org.springframework.boot' version '3.3.1'
   id 'org.owasp.dependencycheck' version '10.0.4'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'org.sonarqube' version '5.1.0.4882'
@@ -165,7 +165,7 @@ dependencyCheck {
   }
 }
 
-dependencyManagement {
+  dependencyManagement {
   dependencies {
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
     // CVE-2018-10237 - Unbounded memory allocation
@@ -178,7 +178,6 @@ dependencyManagement {
     dependency group: 'commons-io', name: 'commons-io', version: '2.16.1'
     dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.16'
     dependency group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.6.0'
-    dependency group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
 
     dependency group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
 
@@ -262,6 +261,8 @@ dependencies {
   testImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.21.0'
   testImplementation group: 'com.h2database', name: 'h2', version: '2.2.224'
   testImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
+
+  testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
