RWA-4056 update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -37,7 +37,7 @@
         "minor",
         "patch"
       ],
-      "automerge": true
+      "automerge": false
     },
     {
       "matchDatasources": [
