--- a/build.gradle
+++ b/build.gradle
@@ -256,6 +256,7 @@ dependencies {
   }
 
   testImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: "${versions.camunda}"
+  testImplementation "org.junit.platform:junit-platform-launcher:${versions.junitPlatform}"
   testImplementation group: 'org.camunda.bpm', name: 'camunda-engine-plugin-spin', version: "${versions.camunda}"
   testImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '15.0.0'
   testImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.23.0'
