--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,7 @@ dependencyManagement {
 repositories {
   mavenLocal()
   mavenCentral()
-  maven { 
+  maven {
     name = "AzureArtifacts"
     url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
   }
@@ -278,7 +278,10 @@ dependencies {
 
 }
 
-mainClassName = 'uk.gov.hmcts.reform.wataskconfigurationtemplate.Application'
+
+application {
+  mainClass = 'uk.gov.hmcts.reform.wataskconfigurationtemplate.Application'
+}
 
 bootJar {
   getArchiveFileName().set(provider {
