--- a/build.gradle
+++ b/build.gradle
@@ -22,27 +22,30 @@ java {
 
 sourceSets {
   functionalTest {
-    java.srcDir file('src/functionalTest/java')
+    java {
+      compileClasspath += main.output
+      runtimeClasspath += main.output
+      srcDir file('src/functionalTest/java')
+    }
     resources.srcDir file('src/functionalTest/resources')
-
-    compileClasspath += sourceSets.main.output
-    runtimeClasspath += sourceSets.main.output
   }
 
   integrationTest {
-    java.srcDir file('src/integrationTest/java')
+    java {
+      compileClasspath += main.output
+      runtimeClasspath += main.output
+      srcDir file('src/integrationTest/java')
+    }
     resources.srcDir file('src/integrationTest/resources')
-
-    compileClasspath += sourceSets.main.output
-    runtimeClasspath += sourceSets.main.output
   }
 
   smokeTest {
-    java.srcDir file('src/smokeTest/java')
+    java {
+      compileClasspath += main.output
+      runtimeClasspath += main.output
+      srcDir file('src/smokeTest/java')
+    }
     resources.srcDir file('src/smokeTest/resources')
-
-    compileClasspath += sourceSets.main.output
-    runtimeClasspath += sourceSets.main.output
   }
 }
 
